--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@capacitor-community/sqlite",
+  "name": "@asello/capacitor-sqlite",
   "version": "3.4.3-3",
   "description": "Community plugin for native & electron SQLite databases",
   "main": "dist/plugin.cjs.js",
