--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@asello/capacitor-sqlite",
-    "version": "5.4.1",
+    "version": "5.4.2",
     "description": "Community plugin for native & electron SQLite databases",
     "main": "dist/plugin.cjs.js",
     "module": "dist/esm/index.js",
@@ -22,10 +22,10 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/capacitor-community/sqlite.git"
+        "url": "git+https://github.com/asello/capacitor-sqlite.git"
     },
     "bugs": {
-        "url": "https://github.com/capacitor-community/sqlite/issues"
+        "url": "https://github.com/asello/capacitor-sqlite/issues"
     },
     "keywords": [
         "capacitor",
@@ -90,12 +90,18 @@
         "ios": {
             "src": "ios"
         },
+        "android": {
+            "src": "android"
+        },
+        "electron": {
+            "src": "electron"
+        },
         "repository": {
             "type": "git",
-            "url": "git+https://github.com/capacitor-community/sqlite.git"
+            "url": "git+https://github.com/asello/capacitor-sqlite.git"
         },
         "bugs": {
-            "url": "https://github.com/capacitor-community/sqlite/issues"
+            "url": "https://github.com/asello/capacitor-sqlite/issues"
         },
         "keywords": [
             "capacitor",
